# tcp-client-server

./: CMakeLists.txt
Flask-Messaging-main/: app.py
PageSet/: .icon-pin.png-autosave.kra  BackEnd.go  MainPage.html  Styles.css  back.jpg~  icon-pin.png~  login-example.html  login-styles.css  message-styles.css  messages-example (2).html  messages-example-test.html  messages-example-test2.html  messages-example.html  new.png~  old-message-styles.css  register-example.html  script-ks.js  script.js  settings-example.html
PageSet/templates-draft/: base-styles.css  chat.html  chats.html  register.html
app/: DBWorker.py  app.py  cfg.py  forms.py  hash.py
app/static/: base-styles.css  chats-styles.css  search-styles.css
app/templates/: base.html  chat.html  chats.html  index.html  login.html  message-styles.css  register.html  search.html  settings.html
server/: CMakeLists.txt  IDBWorker.cpp  IDBWorker.h
server/Autorization/: DBWorkerAutorization.cpp  DBWorkerAutorization.h  IDBWorkerAutorization.cpp  IDBWorkerAutorization.h
server/Messages/: DBMessageWorker.cpp  DBMessageWorker.h  IDBMessageWorkerEssential.cpp  IDBMessageWorkerEssential.h
templates/: base-styles.css  base.html  chat.html  chats-list.html  chats-styles.css  chats.html  register.html  script.js  search-styles.css  search.html  settings.html
